# neo

./: .gitignore  LICENSE  README.md  classes.py  loginManager2.py  main.py  privateKeyPassPhrase.txt  pyproject.toml  replit.nix  test.sushxh  text.txt  text1.txt
classes/:  q .json  1243.json  classdemerde.json  faw .json  math.json  testclass.json  testclass2.json
code/: bootstrap.min.css  hashing.js  schools.json
rsa_key_pair/: private.pem  public.pem
templates/: adminpnl.html  changepwd.html  classassign.html  classdel.html  classes.html  classnew.html  classpeople.html  classresources.html  classstream.html  fileSubmit.html  fileViewer.html  index.html  locked.html  myaccount.html  newassignment.html  newclass.html  newpost.html  newresource.html  signin.html  signup.html  subdomain.html  teacherassign.html  teacherresources.html  teacherstream.html
users/: A.json  A2.json  B.json  d.json  ome.json  wdad.json
